review: die Befunde aus dem Milliways/Facetten-Durchgang abtragen
Acht Befunde seit 83fa6bcab.

- Die Facetten-Auswahl ueberlebte den Modalitaets-Wechsel in der Such-App.
  submit() schickt sie mit, der Dispatcher wirft jeden Provider raus der
  den Key nicht deklariert — origin-place auf News waehlen, auf Bilder
  wechseln, Suche kommt leer. Und weil dort nichts angeboten wird, waren
  Fold und Badge ausgeblendet: der Filter war weder sichtbar noch
  loeschbar. Wird jetzt auf die angebotenen Keys gestutzt (nicht geleert —
  eine Facette die beide Modalitaeten fuehren meint der Leser noch).
- loadAllFacetValues() nahm den Label-Snapshot VOR der Schleife und schrieb
  ihn danach zurueck, also warf es jedes Label weg das levelOf() inzwischen
  geholt hatte. Bei lazyChildren-Facetten waren das alle → Chips zeigten
  medtop:15000000 statt "sport".
- ToolHealthTab leitete "aufgeklappt" aus der Cooldown-Zahl ab, also war
  der Chevron fuer jede OK/DEGRADED-Zeile ein No-op und deren Detailblock
  unerreichbar. Jetzt zwei Sets: die Cooldown-Zahl entscheidet nur den
  Startzustand.
- ShareModal setzte die 409-Meldung und rief dann openFresh(), dessen
  erste Zeile error auf null setzt. Reihenfolge gedreht.
- SmtpConfig.fromParameters stand ausserhalb des try. Ein halb ausgefuelltes
  smtp_sender-Pack meldet READY, und die IAE entkam als 500/outcome=failed
  statt als 422 mit der Meldung, mit der der Betreiber etwas anfangen kann.
- ShareRequest kopierte rohes JSON mit Map.copyOf → NPE auf null-Werten,
  500 statt 422. Nulls werden verworfen.
- FeedItemTool gab extras, body, author und tags ungehaertet ans Modell.
  extras kommen seit dem Facetten-Umbau verbatim von der Gegenseite; das
  ist derselbe Injection-Pfad, den SearchHitRows auf der Research-Seite
  schon geschlossen hat.
- InboxShareHandler.availability() baute die volle Empfaengerliste (User-
  Scan plus eine Autorisierungspruefung je User) fuer eine Ja/Nein-Frage,
  bei jedem GET /share/handlers. Jetzt beschraenkt